--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -365,7 +365,7 @@
 
 					<a href="#" class="schedule-list">
 						<div class="schedule-title">
-							<i class="icon-only icon-24 icon-calendar-repeat" aria-title="개인일정 반복"></i>
+							<i class="icon-only icon-24 icon-calendar-repeat" aria-label="개인일정 반복"></i>
 							<strong class="title-medium">일정 제목</strong>
 						</div>
 						<div class="schedule-content">
