--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -351,19 +351,19 @@
 				//개인 일정
 				const schedule_01 = document.querySelectorAll('.schedule_01 .schedule-wrap');
 				schedule_01.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label01" aria-title="개인 일정"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label01" aria-label="개인 일정"></div>');
 				})
 
 				//고객 생일
 				const schedul_02 = document.querySelectorAll('.schedule_02 .schedule-wrap');
 				schedul_02.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label02 aria-title="고객 생일"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label02 aria-label="고객 생일"></div>');
 				})
 
 				//수신 만기
 				const schedul_03 = document.querySelectorAll('.schedule_03 .schedule-wrap');
 				schedul_03.forEach(function(item) {
-					item.insertAdjacentHTML('beforeend', '<div class="sc-label label03" aria-title="수신 만기"></div>');
+					item.insertAdjacentHTML('beforeend', '<div class="sc-label label03" aria-label="수신 만기"></div>');
 				})
 			}
 
