--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -789,6 +789,22 @@
 					<i class="icon-only icon-12 icon-nav05 bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-setting</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-setting bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-setting bg-icon-gray_1"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
