--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -1116,9 +1116,9 @@ i.live-off {display:inline-block;width:9px;height:9px;background:url(../images/P
 
 /* eco-section */
 .eco-section {background-color:var(--background-bg_lightGray);}
-.eco-section .tags-wrap {display:flex;flex-direction:column;gap:8px;align-items:center;}
-.eco-section .eco-list {display:block;padding:14px 16px 16px;background-color:var(--surface-surface);border-radius:12px;box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
-.eco-section .eco-list:not(:last-child) {margin-bottom:16px;}
+.eco-wrap .tags-wrap {display:flex;flex-direction:column;gap:8px;align-items:center;}
+.eco-wrap .eco-list {display:block;padding:14px 16px 16px;background-color:var(--surface-surface);border-radius:12px;box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.eco-wrap .eco-list:not(:last-child) {margin-bottom:16px;}
 .eco-list .eco-title {display:flex;align-items:center;gap:6px;}
 
 .eco-list .eco-title .title-medium {padding:0;}
