--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -518,8 +518,9 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .visual-headline span b {font-weight:700;}
 .visual-headline strong {display:block;font-size:30px;font-weight:700;color:var(--typography-title);line-height:1.5;margin-top:10px;}
 
+.main-section-title {display:flex;align-items:center;justify-content:space-between;margin-bottom:16px;}
 .main-schedule-section {padding:24px 0 48px;}
-.main-schedule-title {display:flex;padding:0 0 0 4px;justify-content:space-between;}
+
 .main-schedule-title .today {display:flex;gap:12px;align-items:center;}
 .main-schedule-title .today strong {display:flex;align-items:center;justify-content:center;flex:0 0 54px;width:54px;height:54px;background-color:var(--surface-surface50);border-radius:20px;font-size:30px;font-weight:700;color:var(--brandPrimary-blue600);}
 .main-schedule-title .today .date {font-size:16px;font-weight:700;color:var(--typography-gray);}
@@ -560,8 +561,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .main-schedule-list .schedule-title .value {white-space:nowrap;}
 
 .main-stock-section {padding:40px 0;background-color:var(--background-bg_lightGray);}
-.main-stock-title {display:flex;align-items:center;justify-content:space-between;}
-.main-stock-list {margin-top:16px;}
+.main-stock-list {}
 .main-stock-list ul {margin-left:-16px;margin-right:-16px;padding-left:16px;padding-right:16px;gap:12px;}
 .main-stock-list ul li {}
 .main-stock-list ul li a {display:block;width:128px;height:176px;background-color:var(--surface-surface);border-radius:8px;padding:24px 0 24px 24px;}
@@ -573,9 +573,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .main-stock-list dl dd .stock {margin-top:8px;padding:0 4px;justify-content:flex-start;}
 
 .main-figure-section {padding:40px 0;}
-.main-figure-title {}
-.main-figure-list {margin-top:16px;}
-.main-figure-list ul {display:flex;gap:12px;}
+.main-figure-list ul {display:flex;gap:12px;padding:0 4px;}
 .main-figure-list ul li {flex:1;}
 .main-figure-list figure {}
 .main-figure-list figure picture {border-radius:32px;background-color:var(--surface-surface50);display:flex;align-items:center;justify-content:center;flex:0 0 96px;width:96px;height:96px;margin:0 auto;}
@@ -595,8 +593,40 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .main-banner-section .swiper-pagination .swiper-pagination-bullet {margin:0;}
 
 .main-notice-section {padding:40px 0;}
-.main-notice-title {display:flex;align-items:center;justify-content:space-between;}
-.main-notice-list {margin-top:16px;}
+.main-notice-list {}
 .main-notice-list a {display:block;padding:0 4px 16px;border-bottom:1px solid var(--border-4);}
 .main-notice-list a p {font-size:16px;font-weight:400;color:var(--typography-gray);}
 .main-notice-list a .date {font-size:14px;font-weight:400;color:var(--typography-caption);text-align:right;margin-top:2px;}
+
+.main-fund-section {padding:32px 0;}
+.main-fund-content .chart-wrap {background-color:var(--background-bg_lightGray);border-radius:8px;}
+
+.main-fund-banner {position:relative;background-color:var(--background-bg_gray);padding:32px 16px 64px;}
+.main-fund-banner picture {position:absolute;right:0;bottom:0;}
+.main-fund-banner .body-medium {padding:0 4px;}
+
+.main-stock-nodata {display:flex;align-items:center;justify-content:space-between;gap:16px;padding:16px 0;}
+
+.main-stock-banner {margin-top:24px;}
+.main-stock-banner a {display:block;}
+.main-stock-banner a img {width:100%;}
+
+.main-economy-section {padding:32px 0;}
+.main-economy-list {}
+
+.goto-news {display:flex;align-items:center;justify-content:space-between;background-color:var(--surface-surface900);border-radius:8px;padding:12px 16px 14px;gap:8px;}
+.goto-news:after  {content:'';align-items:center;justify-content:center;flex:0 0 9px;width:9px;height:18px;
+    -webkit-mask-position:center center;
+    mask-position:center center;
+    -webkit-mask-size:contain;
+    mask-size:contain;
+    -webkit-mask-repeat:no-repeat;
+    mask-repeat:no-repeat;
+    -webkit-mask-image:url(../images/arrow/ico_chevron.svg);
+    mask-image:url(../images/arrow/ico_chevron.svg);
+    background-color:var(--icon-white);
+}
+.goto-news span {flex:1;display:flex;align-items:center;justify-content:center;font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;gap:8px;}
+
+.main-exchange-section {padding:32px 0 0;}
+.main-exchange-section .exchange-wrap {padding:0;}
