--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -805,7 +805,22 @@
 					<i class="icon-only icon-12 icon-setting bg-icon-gray_1"></i>
 				</div>
 			</div>
-
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-notebook</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-notebook bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-notebook bg-icon-gray_1"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
