펀드/지수비교

--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -497,7 +497,7 @@
 
 
 /* fund-result */
-.fund-result {padding-top:40px;margin-bottom:24px;}
+.fund-result {padding-top:40px;}
 .fund-result .result-title {display:flex;align-items:center;justify-content:center;text-align:center;font-size:16px;font-weight:700;line-height:1.5;margin-bottom:24px;}
 .fund-result .result-title span {font-size:18px;color:var(--status-active);vertical-align:top;}
 
