펀드/지수비교

--- a/html/components/component_toast.html
+++ b/html/components/component_toast.html
@@ -96,16 +96,16 @@
 			});
 		});
 		$('#success').click(function(event) {
-			toastr.success(``, 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, veritatis accusamus obcaecati quis placeat natus inventore deleniti error animi sed libero debitis earum dolor facere corrupti voluptas, eaque, repudiandae suscipit?');
+			toastr.success(``, '등록되었습니다.');
 		});
 		$('#info').click(function(event) {
 			toastr.info('', 'You clicked Info toast')
 		});
 		$('#caution').click(function(event) {
-			toastr.caution('', 'You clicked Caution Toast')
+			toastr.caution('', '삭제되었습니다.')
 		});
 		$('#error').click(function(event) {
-			toastr.error('', 'You clicked Error Toast')
+			toastr.error('', '더 이상 등록할 수 없습니다.')
 		});
 	</script>
 </body>
