--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -93,8 +93,8 @@
 						<strong class="title-large mt8">명함 촬영 안내</strong>
 						<p class="body-large mt8">휴대폰 세로 모드로 촬영하세요.</p>
 						<picture class="d-flex j-center mt16">
-							<source srcset="/resources/images/@temp/image_TMP.png">
-							<img src="/resources/images/@temp/image_TMP.png" alt="">
+							<source srcset="/resources/images/PBWBU/img_bc_info.svg">
+							<img src="/resources/images/PBWBU/img_bc_info.svg" alt="">
 						</picture>
 						`,
 			})
